# gigged-glasgow

./: .env.example  .gitignore  BUTTON_AUDIT.md  FRONTEND_GUIDE.md  FRONTEND_RESCUE_REPORT.md  README.md  SCRAPING_POLICY.md  package-lock.json  package.json
backend/: alembic.ini  manage.py  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/cities/: __init__.py  base.py  examples.py  glasgow.py  registry.py
backend/app/core/: settings.py
backend/app/crud/: __init__.py
backend/app/db/: schema.py  session.py
backend/app/lib/: __init__.py
backend/app/models/: __init__.py  app_setting.py  artist.py  city.py  city_brand.py  event.py  extracted_event_candidate.py  ingestion_log.py  ingestion_run.py  promoter_submission.py  raw_event.py  scrape_run.py  social_post.py  source.py  source_feed.py  source_health.py  venue.py  venue_check_log.py  venue_coverage.py  weekly_issue.py
backend/app/schemas/: city.py  event.py  social_post.py  venue.py
backend/app/services/: app_settings.py  city_brands.py  deduplication.py  ingestion.py  meta_publishing.py  normalization.py  seed.py  social_generation.py  source_health.py  venue_coverage.py  venue_page_checker.py  venue_scraper.py  weekly.py  weekly_run.py
backend/app/sources/: __init__.py  bandsintown.py  base.py  eventbrite.py  feed.py  (+8 more)
backend/seeds/: glasgow_venue_coverage.json  glasgow_venues.json  manual_events.csv
backend/tests/: test_api_smoke.py  test_ingestion_helpers.py  test_venue_page_checker.py  test_venue_scraper.py
(+78 files in other folders)
