[project]
name = "gigged-glasgow-backend"
version = "0.1.0"
description = "FastAPI backend for Gigged Glasgow."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.1",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic-settings>=2.3.0",
  "python-slugify>=8.0.4",
  "python-dateutil>=2.9.0",
  "pillow>=10.3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
